--- a/config.json
+++ b/config.json
@@ -8,10 +8,10 @@
     "password": "m",
     "timeout": 120,
     "udp_timeout": 60,
-    "method": "aes-256-cfb",
-    "protocol": "auth_aes128_md5",
+    "method": "aes-256-ctr",
+    "protocol": "auth_aes128_sha1",
     "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth_compatible",
+    "obfs": "plain",
     "obfs_param": "",
     "speed_limit_per_con": 0,
 
