--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "password": "m",
     "timeout": 120,
     "udp_timeout": 60,
-    "method": "aes-256-ctr",
-    "protocol": "auth_aes128_sha1",
+    "method": "aes-256-cfb",
+    "protocol": "auth_aes128_md5",
     "protocol_param": "",
     "obfs": "plain",
     "obfs_param": "",
