--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "server": "0.0.0.0",
     "server_ipv6": "::",
-    "server_port": 11361,
+    "server_port": 30001,
     "local_address": "127.0.0.1",
     "local_port": 1080,
 
@@ -11,7 +11,7 @@
     "method": "none",
     "protocol": "auth_aes128_sha1",
     "protocol_param": "",
-    "obfs": "plain",
+    "obfs": "tls1.2_ticket_auth",
     "obfs_param": "",
     "speed_limit_per_con": 0,
 
@@ -19,7 +19,7 @@
     "dns_ipv6": false,
     "connect_verbose_info": 0,
     "connect_hex_data": 0,
-    "redirect": ["*:11361#127.0.0.1:15973"],
+    "redirect": ["*:30001#127.0.0.1:15973"],
     "fast_open": true,
     "friendly_detect": 1
 }
